<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">新新农人</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <!-- 登录话术 -->
    <!--phone-->
    <string name="please_input_your_phone">请输入您的手机号</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_right_phone">请输入正确的手机号</string>
    <!--password-->
    <string name="please_input_your_password">请输入您的密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_your_confirm_password">请输入您的确认密码</string>
    <string name="input_confirm_password">请输入确认密码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="newPasswork">请输入新密码</string>
    <string name="confirmpassword">确认新密码</string>
    <string name="password_not_fit">两次密码不一致，请重新输入</string>
    <string name="password_lt_6">密码长度不小于6位</string>
    <string name="password_gt_20">密码长度不能大于20位</string>
    <!--sms_code-->
    <string name="setVerificationCode">验证码</string>
    <string name="free_get_sms_code">免费获取验证码</string>
    <string name="input_sms_code">请输入验证码</string>
    <!--other-->
    <string name="login_button">登录</string>
    <string name="confirm_login">确认登录</string>
    <string name="reg_button">立即注册</string>
    <!--用户信息和订单操作-->
    <string name="save">保存</string>
    <string name="complete">完成</string>
    <string name="amounts">合计：</string>

</resources>