<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_activity"
    android:orientation="vertical">

    <include layout="@layout/title_lay" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <include layout="@layout/line_lay" />

    <EditText
        android:id="@+id/backedit1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="请输入旧密码"
        android:inputType="textPassword"
        android:padding="10dp" />

    <include layout="@layout/line_lay" />

    <EditText
        android:id="@+id/backnewpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/newPasswork"
        android:inputType="textPassword"
        android:padding="10dp" />

    <include layout="@layout/line_lay" />

    <EditText
        android:id="@+id/confimPasword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:padding="10dp" />

    <include layout="@layout/line_lay" />


    <TextView
        android:id="@+id/backdengLubutton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_roate"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/complete"
        android:textColor="@color/white" />
</LinearLayout>