<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_activity"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <include layout="@layout/title_lay" />

    <LinearLayout
        android:id="@+id/retrieve_password_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="center"
                android:src="@drawable/re_psd_phone" />

            <com.ksfc.newfarmer.widget.ClearEditText
                android:id="@+id/backedit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawableRight="@drawable/delete_selector"
                android:hint="@string/please_input_your_phone"
                android:inputType="number"
                android:maxLength="11" />
        </LinearLayout>

        <include layout="@layout/line_lay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="center"
                android:src="@drawable/re_psd_sms" />

            <EditText
                android:id="@+id/backyanzhengma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/setVerificationCode"
                android:inputType="number"
                android:maxLength="6"
                android:padding="10dp" />

            <TextView
                android:id="@+id/backgetVerificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_roate"
                android:padding="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/free_get_sms_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <include layout="@layout/line_lay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="center"
                android:src="@drawable/login_code" />

            <com.ksfc.newfarmer.widget.ClearEditText
                android:id="@+id/backnewpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawableRight="@drawable/delete_selector"
                android:hint="@string/please_input_your_password"
                android:inputType="textPassword"
                android:maxLength="20" />
        </LinearLayout>

        <include layout="@layout/line_lay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="center"
                android:src="@drawable/login_code" />

            <com.ksfc.newfarmer.widget.ClearEditText
                android:id="@+id/confimPasword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawableRight="@drawable/delete_selector"
                android:hint="@string/input_your_confirm_password"
                android:inputType="textPassword"
                android:maxLength="20" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/retrieve_password_lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:background="@drawable/check_box_selector"
            android:button="@null"
            android:checked="true"
            android:padding="2dp" />

        <TextView
            android:id="@+id/xieyileft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="我已阅读并同意"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/register_layoutxieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="《新新农人用户协议》"
            android:textColor="@color/qianlv"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/backdengLubutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/login_roate"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/reg_button"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="已有账号?"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/reg_dengLubutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/login_button"
            android:textColor="@color/qianlv"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>