<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <include layout="@layout/title_lay" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:padding="15dp" >

        <LinearLayout
            android:id="@+id/retrieve_password_lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_regbutton"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/re_psd_phone" />

                <EditText
                    android:id="@+id/backedit1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"

                    android:hint="@string/phonenumber"
                    android:inputType="number"
                    android:maxLength="11"
                    android:padding="10dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_act_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/re_psd_sms" />

                <EditText
                    android:id="@+id/backyanzhengma"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/setVerificationCode"

                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/backgetVerificationCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/login_roate"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:textSize="14sp"
                    android:paddingRight="5dp"
                    android:text="免费获取验证码"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_act_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/re_psd_code" />

                <EditText
                    android:id="@+id/backnewpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/newPasswork"

                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:padding="10dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_act_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:scaleType="center"
                    android:src="@drawable/re_psd_code" />

                <EditText
                    android:id="@+id/confimPasword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/confirmpassword"

                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/retrieve_password_lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/retrieve_password_lin"
            android:orientation="horizontal"
            android:layout_marginTop="36dp" >

            <CheckBox
                android:id="@+id/check_box"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:checked="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/check_box_selector"
                android:button="@null"
                android:padding="2dp"
                 />

            <TextView
                android:id="@+id/xieyileft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:text="我已阅读并同意"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_layoutxieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="《新新农人用户协议》"
                android:textColor="@color/qianlv"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/backdengLubutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/retrieve_password_lin1"
            android:layout_marginTop="14dp"
            android:background="@drawable/login_roate"
            android:gravity="center"
            android:padding="10dp"
            android:text="立即注册"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/backdengLubutton"
            android:layout_marginTop="46dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已有账号?"
                android:textColor="@color/white"
                 />

            <TextView
                android:id="@+id/reg_dengLubutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="登录"
                android:textColor="@color/qianlv"
                 />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>